--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,8 +24,13 @@ audio-worklet = [
 js-sys = "0.3.68"
 pin-project = "1"
 wasm-bindgen = { version = "0.2.91", default-features = false }
+wasm-bindgen-futures = "0.4.41"
 web-sys = { version = "0.3.68", features = [
+	"AbortController",
+	"AbortSignal",
 	"DedicatedWorkerGlobalScope",
+	"MessageChannel",
+	"MessagePort",
 	"Navigator",
 	"SharedWorkerGlobalScope",
 	"Window",
@@ -34,7 +39,6 @@ web-sys = { version = "0.3.68", features = [
 
 [target.'cfg(all(target_family = "wasm", target_os = "unknown", target_feature = "atomics"))'.dependencies]
 atomic-waker = "1"
-wasm-bindgen-futures = "0.4.41"
 web-sys = { version = "0.3", features = [
 	"Blob",
 	"BlobPropertyBag",
