Fix `async-channel` locking when dropping some types

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,7 +58,7 @@ pollster = { version = "0.3", features = ["macro"] }
 ui_test = { git = "https://github.com/daxpedda/ui_test", branch = "web-thread" }
 
 [target.'cfg(target_family = "wasm")'.dev-dependencies]
-async-channel = "2"
+async-channel = { version = "2", default-features = false }
 console_error_panic_hook = "0.1"
 wasm-bindgen-futures = "0.4"
 wasm-bindgen-test = "0.3"
