--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -141,7 +141,7 @@ jobs:
               description: Firefox,
               name: GECKODRIVER,
               value: geckodriver,
-              flags: --cfg=unsupported_service --cfg=unsupported_shared_block
+              flags: --cfg=unsupported_service --cfg=unsupported_shared_block --cfg=unsupported_wait_async
             }
           - {
               os: macos-latest,
