--- a/Cargo.toml
+++ b/Cargo.toml
@@ -85,13 +85,6 @@ web-time = "1"
 atomic-waker = "1"
 futures-util = { version = "0.3", default-features = false }
 
-[patch.crates-io]
-js-sys = { git = "https://github.com/daxpedda/wasm-bindgen", branch = "web-thread" }
-wasm-bindgen = { git = "https://github.com/daxpedda/wasm-bindgen", branch = "web-thread" }
-wasm-bindgen-futures = { git = "https://github.com/daxpedda/wasm-bindgen", branch = "web-thread" }
-wasm-bindgen-test = { git = "https://github.com/daxpedda/wasm-bindgen", branch = "web-thread" }
-web-sys = { git = "https://github.com/daxpedda/wasm-bindgen", branch = "web-thread" }
-
 [[example]]
 doc-scrape-examples = true
 name = "audio_worklet"
@@ -100,6 +93,11 @@ required-features = ["audio-worklet"]
 [[test]]
 name = "audio_worklet_fail"
 path = "tests/audio_worklet_fail.rs"
+test = false
+
+[[test]]
+name = "audio_worklet_fail_async"
+path = "tests/audio_worklet_fail_async.rs"
 test = false
 
 [[test]]
@@ -113,8 +111,18 @@ path = "tests/basic_fail.rs"
 test = false
 
 [[test]]
+name = "basic_fail_async"
+path = "tests/basic_fail_async.rs"
+test = false
+
+[[test]]
 name = "basic_success"
 path = "tests/basic_success.rs"
+test = false
+
+[[test]]
+name = "basic_success_async"
+path = "tests/basic_success_async.rs"
 test = false
 
 [[test]]
