--- a/minimal-versions/Cargo.toml
+++ b/minimal-versions/Cargo.toml
@@ -6,6 +6,7 @@ version = "0.0.0"
 
 [features]
 audio-worklet = ["web-thread/audio-worklet"]
+message = ["web-thread/message"]
 
 [dependencies]
 web-thread = { path = ".." }
