Don't forget `wait_async.js`

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -124,6 +124,7 @@ jobs:
         run: sudo npm i -g eslint
       - name: Run ESLint
         run: |
+          eslint src/thread/atomics/wait_async.js
           eslint src/thread/atomics/spawn/worker.js
           eslint src/thread/atomics/spawn/worker_with_audio_worklet.js
           eslint src/thread/atomics/audio_worklet/register/worklet.js
