--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -55,6 +55,7 @@ jobs:
         run: sudo npm i -g @swc/cli
       - name: Run SWC
         run: |
+          swc src/thread/atomics/wait_async.js -o src/thread/atomics/wait_async.min.js
           swc src/thread/atomics/spawn/worker.js -o src/thread/atomics/spawn/worker.min.js
           swc src/thread/atomics/spawn/worker_with_audio_worklet.js -o src/thread/atomics/spawn/worker_with_audio_worklet.min.js
           swc src/thread/atomics/audio_worklet/register/worklet.js -o src/thread/atomics/audio_worklet/register/worklet.min.js
