--- a/Cargo.toml
+++ b/Cargo.toml
@@ -233,8 +233,16 @@ unsafe_op_in_unsafe_fn = "warn"
 unused_import_braces = "warn"
 unused_lifetimes = "warn"
 unused_qualifications = "warn"
-## https://github.com/rust-lang/rust/issues/121621#issuecomment-1963599974
-non_local_definitions = "allow"
+# Rules
+unexpected_cfgs = { level = "warn", check-cfg = [
+	"cfg(unsupported_headless_audiocontext)",
+	"cfg(unsupported_service)",
+	"cfg(unsupported_shared_block)",
+	"cfg(unsupported_spawn)",
+	"cfg(unsupported_spawn_then_block)",
+	"cfg(unsupported_wait_async)",
+	"cfg(web_sys_unstable_apis)",
+] }
 
 [lints.clippy]
 # Clippy groups.
@@ -306,8 +314,6 @@ unwrap_used = "warn"
 use_debug = "warn"
 verbose_file_reads = "warn"
 # Allowed Clippy lints.
-## https://github.com/rust-lang/rust-clippy/issues/12377
-empty_docs = "allow"
 equatable_if_let = "allow"
 explicit_deref_methods = "allow"
 from_iter_instead_of_collect = "allow"
