--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,7 +60,10 @@ web-sys = { version = "0.3.69", features = [
 	"MessageChannel",
 	"MessagePort",
 	"Navigator",
+	"Scheduler",
+	"SchedulerPostTaskOptions",
 	"SharedWorkerGlobalScope",
+	"TaskPriority",
 	"Window",
 	"WorkerNavigator",
 ] }
