--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -47,6 +47,9 @@ jobs:
     name: SWC
 
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./src/thread/atomics/script
 
     steps:
       - name: Checkout
@@ -55,11 +58,7 @@ jobs:
         run: sudo npm i -g @swc/cli
       - name: Run SWC
         run: |
-          swc src/thread/atomics/wait_async.js -o src/thread/atomics/wait_async.min.js
-          swc src/thread/atomics/spawn/worker.js -o src/thread/atomics/spawn/worker.min.js
-          swc src/thread/atomics/spawn/worker_with_audio_worklet.js -o src/thread/atomics/spawn/worker_with_audio_worklet.min.js
-          swc src/thread/atomics/audio_worklet/register/worklet.js -o src/thread/atomics/audio_worklet/register/worklet.min.js
-          swc src/thread/atomics/audio_worklet/register/worklet_with_message.js -o src/thread/atomics/audio_worklet/register/worklet_with_message.min.js
+          swc . --ignore "node_modules,**/*.d.ts" --only **/*.ts -d . --out-file-extension min.js
       - name: Check for diff
         run: |
           [[ -z $(git status -s) ]]
