--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -1,29 +1,29 @@
 name: Audit
 
 on:
-  push:
-    branches: ["main"]
-  pull_request:
+    push:
+        branches: ['main']
+    pull_request:
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.ref_name }}
-  cancel-in-progress: true
+    group: ${{ github.workflow }}-${{ github.ref_name }}
+    cancel-in-progress: true
 
 env:
-  CARGO_TERM_COLOR: always
+    CARGO_TERM_COLOR: always
 
 jobs:
-  audit:
-    name: Audit
+    audit:
+        name: Audit
 
-    runs-on: ubuntu-latest
+        runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Install `cargo-audit`
-        uses: taiki-e/install-action@v2
-        with:
-          tool: cargo-audit
-      - name: Run Audit
-        run: cargo audit -D warnings
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v4
+            - name: Install `cargo-audit`
+              uses: taiki-e/install-action@v2
+              with:
+                  tool: cargo-audit
+            - name: Run Audit
+              run: cargo audit -D warnings
